Improve handling of interrupted request by alllowing retries
Signed-off-by: clinique <gael@lhopital.org>